--- a/Dual-Mode-Calculator/DualModeCalculator.ui
+++ b/Dual-Mode-Calculator/DualModeCalculator.ui
@@ -50,6 +50,13 @@
           <height>60</height>
          </size>
         </property>
+        <property name="font">
+         <font>
+          <pointsize>18</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
         <property name="text">
          <string>Mode</string>
         </property>
@@ -87,6 +94,9 @@
         </property>
         <property name="text">
          <string>His</string>
+        </property>
+        <property name="shortcut">
+         <string>H</string>
         </property>
        </widget>
       </item>
